--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vestas Proof of Concept - Sample Static HTML Site hosted on ASE App Service</title>
+    <title>Vestas Proof of Concept</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
   <body>
     <div class="navbar-wrapper">
       <div class="container">
-          <h1>Azure App Service - Sample Static HTML Site</h1>
+          <h1>Vestas Proof of Concept - Sample Site hosted on ASE App Service</h1>
           <hr/>
       </div>
     </div>
