--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="row">
         <div class="col-xs-12 col-sm-6">
-          <img class="img-rectangle" src="img/deathstar.jpeg" alt="Deathstar" height="140">
+          <img class="img-rectangle" src="img/deathstar_gif.jpeg" alt="Deathstar" height="140">
           <h2>Vestas</h2>
           <p>Vestas Team DeathStar.</p>
         </div>
