--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-sm-4">
           <img class="img-rectangle" src="img/deathstar_gif.gif" alt="Deathstar" height="140">
           <h2>Vestas</h2>
-          <p>Vestas Team DeathStar.</p>
+          <p>Team DeathStar.</p>
         </div>
-          <div class="col-xs-12 col-sm-6">
+          <div class="col-xs-12 col-sm-4">
               <img class="img-rectangle" src="img/jjb_thumbsup.jpg" alt="JarJar Binks" height="140">
               <h2>Sentia</h2>
-              <p>Sentia Team Jar Jar Binks.</p>
+              <p>Team Jar Jar Binks.</p>
           </div>
       </div>
     </div>
