--- a/index.html
+++ b/index.html
@@ -45,5 +45,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="js/bootstrap.min.js"></script>
+    <script>
+    async function getData()
+      {
+          //await the response of the fetch call
+         let response = await fetch('https://kibana.vestas-poc.demo.sentia.net/api/status');
+          //proceed once the first promise is resolved.
+         let data = await response.json()
+          //proceed only when the second promise is resolved
+          return data;
+      }
+      //call getData function
+      getData()
+      .then(data => console.log(data));//log the data
+      </script>
   </body>
 </html>
