--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         console.log("error")
       };
     </script>
+    <div id="mydiv"></div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
