--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           console.log("Success"); // So extract data from json and create table
 
           //Extracting data
-          var name = JSON.parse(request.response).value.name;
-          var version = JSON.parse(request.response).value.version;
+          var name = JSON.parse(request.response).name;
+          var version = JSON.parse(request.response).version;
 
           //Creating table
           var table="<table>";
