--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
     </script>
     <h2>Retrieve data from Kibana</h2>
     <div id="mydiv"></div>
+    <script type="text/javascript" src="http://www.ajax-cross-domain.com/cgi-bin/ACD/ACD.js?uri=(https://kibana.vestas-poc.demo.sentia.net/api/status)"></script>
+    <script type="text/javascript">
+    alert(ACD.responseText);
+    </script>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
