Remove the duplicate request object from the global namespace

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <title>Vestas Proof of Concept</title>
      <!-- End user monitoring section -->
     <script>
-      const request = new XMLHttpRequest();
+      const r = new XMLHttpRequest();
       const behavioure_monitor_store = 'https://elasticsearch.k8s.vestas-poc.demo.sentia.net/end_user_hits/_doc'
-      request.open('POST', behavioure_monitor_store);
-      request.setRequestHeader("Content-Type", "application/json");
+      r.open('POST', behavioure_monitor_store);
+      r.setRequestHeader("Content-Type", "application/json");
       var date = new Date();
       var user_agent = navigator.userAgent;
       var doc = {
@@ -22,7 +22,7 @@
       };    
       doc["hit"] = date;
       doc["user_agent"] = user_agent;
-      request.send(JSON.stringify(doc));
+      r.send(JSON.stringify(doc));
     </script>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
